--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
+    "axios": "0.19.0",
+    "axios-jsonp": "1.0.4",
     "core-js": "^3.4.3",
+    "moment": "2.24.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10"
   },
@@ -22,6 +28,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-fontawesome": "0.2.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
