--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "axios": "0.19.0",
     "axios-jsonp": "1.0.4",
+    "bootstrap-vue": "2.1.0",
     "core-js": "^3.4.3",
-    "moment": "2.24.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10"
   },
